fixing the access to  api/v1/android/book & api/v1/books to admin-user on postman
Signed-off-by: khalidlotfi <khalidlotfi2005@gmail.com>

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,6 @@
   <ul>
     <li><%= link_to "Web books", books_path  %></li>
     <li><%= link_to "API V1 books", api_v1_books_path %> </li>
-    <li>API V1 android books</li>
+    <li><%= link_to "API V1 android books", api_v1_android_books_path %> </li>
   </ul>
 </div>
